updated og image

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta property="og:title" content="Orientation 2020" />
     <meta property="og:url" content="http://spectatorpublishing.github.io/orientation-2020" />
-    <meta property="og:image" content="https://arc-anglerfish-arc2-prod-spectator.s3.amazonaws.com/public/KPXXJFOVYRHR5HPKJ76CND2574.jpg" />
+    <meta property="og:image" content="https://cloudfront-us-east-1.images.arcpublishing.com/spectator/R7CDAFZ57FE2DAHQISZB2FD7UI.gif" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
