--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta property="og:title" content="Orientation 2020" />
-    <meta property="og:url" content="http://spectatorpublishing.github.io/orientation-2020" />
+    <meta property="og:url" content="https://orientation.columbiadailyspectator.com/" />
     <meta property="og:image" content="https://cloudfront-us-east-1.images.arcpublishing.com/spectator/R7CDAFZ57FE2DAHQISZB2FD7UI.gif" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
