updated img and directory

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Orientation 2020"
+      content="Columbia Daily Spectator's Guide to Orientation"
     />
     <link rel="stylesheet" href="https://use.typekit.net/cdu0unr.css">
 
@@ -19,7 +19,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta property="og:title" content="Orientation 2020" />
     <meta property="og:url" content="https://orientation.columbiadailyspectator.com/" />
-    <meta property="og:image" content="https://cloudfront-us-east-1.images.arcpublishing.com/spectator/R7CDAFZ57FE2DAHQISZB2FD7UI.gif" />
+    <meta property="og:image" content="https://cloudfront-us-east-1.images.arcpublishing.com/spectator/PNBBOPJR6VEELGNFTBYYF3BXPE.png" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
