updated meta data

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Orientation 2020"
+      name="description"
       content="Columbia Daily Spectator's Guide to Orientation"
     />
     <link rel="stylesheet" href="https://use.typekit.net/cdu0unr.css">
